@@ -1,4 +1,4 @@
-@comment $NetBSD: PLIST,v 1.11 2003/06/04 06:12:21 jlam Exp $
+@comment $NetBSD: PLIST,v 1.12 2003/09/14 22:25:25 jlam Exp $
 bin/findsmb
 bin/make_printerdef
 bin/make_smbcodepage
@@ -143,6 +143,8 @@ share/examples/samba/LDAP/smbldap-tools/smbldap-usershow.pl
 share/examples/samba/LDAP/smbldap-tools/smbldap_conf.pm
 share/examples/samba/LDAP/smbldap-tools/smbldap_tools.pm
 share/examples/samba/README
+share/examples/samba/adduser.sh
+share/examples/samba/deluser.sh
 share/examples/samba/misc/convert_smbpasswd
 share/examples/samba/misc/extra_smbstatus
 share/examples/samba/misc/modify_samba_config.pl
